# zip

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  libtool  package.json
core/: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.h  config.status  configure  configure.ac  libtool
core/include/novemberizing/: zip.h
core/src/: Makefile  Makefile.am  Makefile.in  libnovemberizingzip.la  zip.c  zip.lo
core/src/.deps/: zip.Plo
core/src/.libs/: libnovemberizingzip.la
src/: Makefile.am  Makefile.in  index.js  libnovemberizingzip.la  main.c  zip.c  zip.h  zip.js  zip.wasm
